Deluge 0.9.07 - "1.0.0_RC7" (18 August 2008)
 Core:
  * Fix loading torrents from state when fastresume file is missing
  * Fix UPnP
  * Fix to prevent Deluge from segfaulting when trying to autoadd an incomplete torrent file
  * Fix #407 possible negative ETA

 GtkUI:
  * Add 'edit' to edit trackers dialog
  * Improve performance of initial torrent list load
  * Fix hiding the bottom pane when disabling all the tabs
  * Fix not showing new torrents if you don't use the All label first
  * Fix size units to be more accurate
  * Fix torrentview sorting to be persistent
  * Fix not displaying file list when state changes
  * Expand root folder in files tab by default

 Null:
  * Fix #415 crash when using 'config-set' with no parameters
  
 Windows:
  * Fix Vista slowness issue
  * Fix properly shutting Deluge down when system shuts down
  * Fix opening folders/files
  
Deluge 0.9.06 - "1.0.0_RC6" (13 August 2008)
 Core:
  * Fix CPU spikes

 GtkUI:
  * Fix move storage dialog when connected to a remote daemon
  
Deluge 0.9.05 - "1.0.0_RC5" (04 August 2008)
 Core:
  * Fix deluged running with ssh X forwarding by removing the Gnome lib import
  * Save resume data periodically to help prevent data loss
  * Fix queue order shuffling on restart
 
 GtkUI:
  * Handle shutting down more cleanly
  * Add translators to credits
  
 Plugins:
  * Improve the Blocklist plugin preferences page.
  
 Windows:
  * Fix drag n' drop support
  
Deluge 0.9.04 - "1.0.0_RC4" (29 July 2008)
 Core:
  * Fix building with gcc 4.3
  * Fix do not create torrentfiles folder unless 'copy_torrent_file' is True

 GtkUI:
  * Add drag n' drop support for adding .torrent files
  * Double-clicking on host in ConnectionManager now will connect to that host
  * Fix selecting torrents when right-clicking on them in torrentview and filestab
  * Fix new release check
  * Display 'total_wanted' instead of 'total_size' in Size column
  * Fix displaying of torrents when language is not English